# Quant-BM-WAND

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  purge.sh  run_clueweb_09.sh  run_gov2.sh
include/: block_postings_list.hpp  bm25.hpp  generic_rank.hpp  impact.hpp  invidx.hpp  query.hpp  util.hpp
ir-repo/: cw09b.qry  cw12b.qry  gov2.qry  uqv.qry
src/: Makefile  build_index.cpp  mk_impact_idx.cpp  search_index.cpp  wand_search.cpp
